[gd_scene load_steps=13 format=2]

[ext_resource path="res://scripts/RockEnemy.gd" type="Script" id=1]
[ext_resource path="res://scripts/HurtBox.gd" type="Script" id=2]
[ext_resource path="res://res/exported/sprites/rockzombie.png" type="Texture" id=3]
[ext_resource path="res://res/exported/fonts/GajrajOne.tres" type="DynamicFont" id=4]
[ext_resource path="res://RockThrower.tscn" type="PackedScene" id=5]
[ext_resource path="res://Fists.tscn" type="PackedScene" id=6]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="CircleShape2D" id=3]

[sub_resource type="CircleShape2D" id=2]
radius = 100.0

[sub_resource type="CircleShape2D" id=4]
radius = 25.0

[sub_resource type="Animation" id=5]
resource_name = "damageFlash"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Body:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="OccluderPolygon2D" id=6]
polygon = PoolVector2Array( -8, -8, -2, -11, 2, -11, 8, -8, 11, -2, 11, 2, 8, 8, 2, 11, -2, 11, -8, 8, -11, 3, -11, -2 )

[node name="RockEnemy" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="RockThrower" parent="." instance=ExtResource( 5 )]
damage = 3

[node name="Body" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Body"]
scale = Vector2( 0.755848, 0.749218 )
texture = ExtResource( 3 )

[node name="HurtBox" type="Area2D" parent="."]
visible = false
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
visible = false
shape = SubResource( 3 )

[node name="FOV" type="Area2D" parent="."]
modulate = Color( 1, 1, 1, 0.129412 )
show_behind_parent = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="FOV"]
visible = false
shape = SubResource( 2 )
disabled = true

[node name="RayCast2D" type="RayCast2D" parent="FOV"]
cast_to = Vector2( 0, 0 )

[node name="Range" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Range"]
modulate = Color( 1, 1, 1, 0.145098 )
shape = SubResource( 4 )

[node name="damageFlash" type="AnimationPlayer" parent="."]
anims/damageFlash = SubResource( 5 )

[node name="Label" type="Label" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 4 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource( 6 )

[node name="Fists" parent="." instance=ExtResource( 6 )]
position = Vector2( 10, 0 )

[connection signal="body_entered" from="FOV" to="." method="_on_FOV_body_entered"]
[connection signal="body_exited" from="FOV" to="." method="_on_FOV_body_exited"]
[connection signal="body_entered" from="Range" to="." method="_on_Range_body_entered"]
[connection signal="body_exited" from="Range" to="." method="_on_Range_body_exited"]
